Bug 90914 - Display of Windows guest is not resized
Summary: Display of Windows guest is not resized
Status: RESOLVED FIXED
Alias: None
Product: Spice
Classification: Unclassified
Component: spice-gtk (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Spice Bug List
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-09 15:22 UTC by Pavel Grunt
Modified: 2015-06-25 13:55 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Pavel Grunt 2015-06-09 15:22:19 UTC
Some clients (gnome-boxes, spicy), that are using "resize-guest" property enabled, are not resizing the display of a Windows guest when the VM has 2 and more QXL devices.
Comment 1 Pavel Grunt 2015-06-25 13:55:43 UTC
Fixed by http://lists.freedesktop.org/archives/spice-devel/2015-June/020453.html
spice-gtk commit 5be627986bf00436b8fd48f365fca47dd87b4754


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.