Send monitor config if guest supports sparse monitors

It is ok to send monitor configuration even for displays which are not
disabled or enabled. Because the guest having support for the sparse
monitor configuration (VD_AGENT_CAP_SPARSE_MONITORS_CONFIG) will not
resize the monitor which is disabled / undefined.

Fixes:
https://bugs.freedesktop.org/show_bug.cgi?id=90914